# bourbaki

./: .env.example  .gitignore  ARCHITECTURE.md  BLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  justfile  package.json  pyrightconfig.json
backend/: pyproject.toml
backend/bourbaki/: __init__.py  config.py  events.py  main.py
backend/bourbaki/agent/: context.py  coordinator.py  core.py  event_mapper.py  messages.py  prompts.py  roles.py  scratchpad.py
backend/scripts/: README.md  _runner_common.py  ab_mathlib_search.py  ab_pass_at_n.py  preflight.py  run_full_244.py  run_minif2f_subset.py  run_putnam_loop.py  view_result.py
backend/tests/: conftest.py  test_answer_generator.py  test_autoformalize.py  test_compute.py  test_coordinator.py  test_decomposer.py  test_decomposer_integration.py  test_formalizer.py  test_health.py  test_lean_lsp.py  test_lemma_library.py  test_mathlib_embeddings.py  test_mathlib_search.py  test_messages.py  test_modal_runner.py  test_multi_agent_integration.py  test_nl_reasoning.py  test_parallel_repl.py  test_pass_at_n.py  test_prompts_v2.py  test_proposer_mathlib_search.py  test_prover_builder.py  test_prover_loop.py  test_prover_proposer.py  test_prover_reviewer_memory.py  test_prover_state.py  test_putnam_loader.py  test_putnam_loop_wiring.py  test_query_session.py  test_repl_pipe_recovery.py  test_results_db.py  test_roles.py  test_scoring.py  test_search_tree.py  test_sessions.py  test_sketch.py  test_tactics.py  test_theorems.py  test_timeouts_aligned.py  test_z_ai_routing.py
docs/: ASSESSMENT.md  (+2 more)
(+113 files in other folders)
